Fixed broken style on Home page

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 :root {
 	--frame-width: 1200px;
 	--sidebar-width: 12px;
-	--font-heading: "VT323", monospace; 
+	--font-heading: "Courier New", Courier, monospace;
 	--font-ui: "Orbitron", Arial, Helvetica, sans-serif;
 	--font-body: "Courier New", Courier, monospace;
 }
